action button layout issue fixed

--- a/apps/clientmanagement/src/app/clients/add-client/add-client.component.scss
+++ b/apps/clientmanagement/src/app/clients/add-client/add-client.component.scss
@@ -101,7 +101,8 @@
 }
 
 header {
-  padding: 0px 2%;
+  padding: 0px 1.15%;
+  margin-bottom: 0.75% !important;
 }
 
 ::ng-deep .ant-tabs-tab.ant-tabs-tab-active {
@@ -129,7 +130,7 @@ header {
 .clear-btn {
   background: white;
   color: #00A551;
-  margin-right: 10px;
+  //margin-right: 10px;
   border: 0.5px solid #00A551;
 }
 
